--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -28,40 +28,94 @@
     <!-- Breadcrumb End -->
 
 
-    <!-- Contact Start -->
+    <!-- About Start -->
     <div class="container-fluid">
         <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4">
-            <span class="bg-secondary pr-3">Haqqımızda</span>
+            <span class="bg-secondary pr-3">Şirkət Haqqında</span>
         </h2>
         <div class="row px-xl-5">
             <div class="col-12 mb-5">
                 <div class="contact-form bg-light p-30">
                     <div class="control-group">
-                        <p class="help-block text-danger">1315315</p>
+                        <h5 style="color: #C68919;">Biz kimik?</h5>
+                        <p>Hər bir böyük biznes hekayəsi kimi bizim hekayəmiz də müştəridən, yəni səndən
+                            başlayır. Sənin istək və ehtiyacların bizim üçün çox vacibdir. Əsas məqsədimiz
+                            ən yaxşı xidmət göstərməklə səni sevindirmək və büdcənə, istəyinə uyğun, düzgün
+                            məhsul seçimi etməkdə sənə yardımçı olmaqdır. “Kontakt – Sevindirir” ifadəsini
+                            də məhz bunun üçün özümüzə sloqan olaraq seçmişik. Rəqəmsal və məişət texnikası,
+                            mebel və tekstil satışı üzrə ölkənin ən böyük mağazalar şəbəkəsindən biri kimi
+                            səni sevindirmək üçün nələr edirik?</p>
                     </div>
                     <div class="control-group">
-                        <p>1321561561 vsvsdvsdvdv dcccccccccccccccccv sdvvvvvvvvvvvvvvvvv
-                        dvdssssssssssssssssssss sdvsddddddddd vdddddddddddddddddddd
-                        dvssssssssssssssssss dssssssssssscdccccccccccccccccccccccccc
-                        dsvvvvvvvvvvvvvvvvvv sddddddddddddddddv</p>
+                        <h5 style="color: #C68919;">Sevilən brendləri sənə daha yaxın gətiririk</h5>
+                        <p>Biz Samsung, LG, Bosch, Tefal, Huawei, Sony, Panasonic, Delonghi Group,
+                            Electrolux, Thomas, Beurer, Bang & Olufsen, Karcher, Beko, H Gala, Cassore, Schafer,
+                            TAÇ, Simge mobilya kimi 40-dan çox beynəlxalq brendin rəsmi distribütoru; Oppo,
+                            Toshiba, Intel, Black&Decker, Hoffmann, Blackview, Kieslect, Etias, Viper, Dark
+                            Project, Blizzard, SBS, Energy Sistem, Defunc və Urbanista kimi beynəlxalq
+                            brendlərin Azərbaycanda eksklüziv distribütoru; Apple brendinin isə rəsmi satış
+                            mərkəziyik. Brend portfoliomuz durmadan böyüyür, odur ki, sevdiyin dünya
+                            brendlərinin məhsullarını rahatlıqla “Kontakt” mağazalarından əldə edə bilərsən.</p>
                     </div>
                     <div class="control-group">
-                        <p class="help-block text-danger">5111111111</p>
+                        <h5 style="color: #C68919;">Axtardığın hər şeyi bir məkana toplamışıq</h5>
+                        <p>İş, dərs, ev, əyləncə və istirahət üçün arzuladığın məhsulların 30 000-dən
+                            çeşidini eyni məkanda – “Kontakt” mağazalarımızda tapa bilərsən. Ünvanlarla
+                            buradan tanış ol.</p>
                     </div>
                     <div class="control-group">
-                        <p class="help-block text-danger">cd1111551</p>
+                        <h5 style="color: #C68919;">Sərfəli təkliflər ilə üzünü güldürürük</h5>
+                        <p>İstər nağd, istərsə də hissəli alış şərtlərini uyğun etməklə, istədiyin
+                            məhsulları daha rahat əldə əldə etməyinə şərait yaradırıq. “Axşam bazarı”,
+                            “Şeş Qoşa”, “Ən yaxşı qiymətə zəmanət” kimi kampaniyalar isə artıq hamının
+                            ən sevimli kampaniyalarına çevrilib.</p>
                     </div>
                     <div class="control-group">
-                        <p class="help-block text-danger">21651161615</p>
+                        <h5 style="color: #C68919;">Sənin məmnunluğun üçün əlavə xidmətlər təklif edirik</h5>
+                        <p>Məhsullarımıza 3 ilədək rəsmi zəmanət təqdim edirik. Bütün zəmanət müddətində
+                            məhsulla bağlı hər hansı çətinliyin yaranarsa, partnyor servis mərkəzləri ilə
+                            çətinliyini qısa müddətdə aradan qaldırırıq. Bundan başqa, rahatlığını düşünərək
+                            məhsulun təmirdə olduğu müddətdə sənə əvəzləyici məhsul təklif edirik. İşdir,
+                            məhsulunun təmiri partnyor servis mərkəzlərində 14 gün ərzində yekunlaşmazsa,
+                            biz o məhsulu sənin üçün tamamilə yenisi ilə əvəz edəcəyik. Bəli, bu qədər iddialıyıq.</p>
                     </div>
-                    <div>
-                        <p>21651161615</p>
+                    <div class="control-group">
+                        <h5 style="color: #C68919;">Sosial öhdəliyimizi yerinə yetiririk</h5>
+                        <p>Həyata keçirdiyimiz və dəstək olduğumuz sosial məsuliyyət layihələri ilə
+                            cəmiyyətdə yeni müsbət dəyərlər yaratmağa çalışırıq.</p>
+                    </div>
+                    <div class="control-group">
+                        <h5 style="color: #C68919;">Həmişə əlçatanıq</h5>
+                        <p>Sənə bir zəng qədər yaxınıq. *6060 Çağrı Mərkəzinə zəng edərək məhsul və
+                            xidmətlərimizlə bağlı bütün suallarını ünvanlaya bilərsən. Bizi həmçinin
+                            sosial şəbəkələrdə də asanlıqla tapa bilərsən.</p>
+                    </div>
+                    <div class="control-group">
+                        <h5 style="color: #C68919;">Tariximiz</h5>
+                        <p>Kiçik mağazadan ölkənin ən böyük riteyl şəbəkələrindən birinə çevrildik. İlk
+                            gündən bu yana inkişaf tempimiz sürətlə artdı. Məqsədimiz həmişə artan məhsul
+                            və xidmətlərimizlə sənə daha çox sevinc yaşatmaqdır.</p>
+                        <p>»» 2006-cı ildə mobil telefon, aksessuar və mobil nömrələrin satışını həyata
+                            keçirən ilk kiçik mağaza ilə fəaliyyətə başladıq. Eyni ildə daha 3 mağazamızı
+                            istifadəyə verdik. İlk mağazalarımızın adı “Kontakt Mobile” idi.</p>
+                        <p>»» 2010-cu ildə məhsul kateqoriyaları siyahısına kompüter və kamera
+                            kateqoriyasını, 2011-ci ildə isə məişət texnikasını əlavə etdik və şəbəkəmizin
+                            adını “Kontakt Electronics” adına dəyişdik.</p>
+                        <p>»» 2013-cü ildə mebel kateqoriyasını da əlavə etdik. Nəticədə "Ev" konsepsiyası
+                            tamamlandı və şəbəkəmiz "Kontakt Home” adlandırıldı.</p>
+                        <p>»» 2020-ci ildə rebrendinq prosesi ərəfəsində şəbəkənin adı “Kontakt Home”dan
+                            “Kontakt”a dəyişdirildi. “Home” və “Smart” hissəcikləri yalnız mağaza konsepti
+                            olaraq saxlanıldı.</p>
+                        <p>»» 2021-ci ildən ölkə sərhədlərini aşaraq Gürcüstanda fəaliyyət göstərməyə başladıq.</p>
+                        <p>Hazırda 40-dan çox beynəlxalq brendin rəsmi distribüteri olaraq Azərbaycan üzrə
+                            ümumilikdə 38 mağaza, Gürcüstanda 3, eləcə də kontakt.az və kontakt.ge onlayn
+                            mağazası ilə xidmət etməyə davam edirik.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Contact End -->
+    <!-- About End -->
 
 
 </section>
