--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -101,9 +101,9 @@
                 <div class="input-group">
                     <input type="text" name="keyword" class="form-control" placeholder="Məhsul axtarın...">
                     <div class="input-group-append">
-                            <button type="submit" class="input-group-text bg-transparent text-primary">
-                                <i class="fa fa-search"></i>
-                            </button>
+                        <button type="submit" class="input-group-text bg-transparent text-primary">
+                            <i class="fa fa-search"></i>
+                        </button>
                     </div>
                 </div>
             </form>
@@ -130,10 +130,12 @@
                  id="navbar-vertical" style="width: calc(100% - 30px); z-index: 999;">
                 <div class="navbar-nav w-100">
                     <div th:each="category : ${categories}" class="nav-item dropdown dropright">
-                        <a th:text="${category.name}" th:href="'/shop/' + ${category.id} + '/0'" class="nav-link dropdown-toggle">
+                        <a th:text="${category.name}" th:href="'/shop/' + ${category.id} + '/0'"
+                           class="nav-link dropdown-toggle">
                             Category name<i class="fa fa-angle-right float-right mt-1"></i></a>
                         <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
-                            <a th:each="subcategory : ${category.subcategories}" th:text="${subcategory.subcategoryName.name}"
+                            <a th:each="subcategory : ${category.subcategories}"
+                               th:text="${subcategory.subcategoryName.name}"
                                th:href="'/shop/0/' + ${subcategory.id}" class="dropdown-item">Subcategory name</a>
                         </div>
                     </div>
@@ -167,12 +169,14 @@
                         </div>
                         <a href="/favorites" class="btn px-0">
                             <i class="fas fa-heart text-primary"></i>
-                            <span th:text="${favoriteSize}" class="badge text-secondary border border-secondary rounded-circle"
+                            <span th:text="${favoriteSize}"
+                                  class="badge text-secondary border border-secondary rounded-circle"
                                   style="padding-bottom: 2px;">0</span>
                         </a>
                         <a href="/cart" class="btn px-0 ml-3">
                             <i class="fas fa-shopping-cart text-primary"></i>
-                            <span th:text="${cartSize}" class="badge text-secondary border border-secondary rounded-circle"
+                            <span th:text="${cartSize}"
+                                  class="badge text-secondary border border-secondary rounded-circle"
                                   style="padding-bottom: 2px;">0</span>
                         </a>
                     </div>
@@ -196,7 +200,8 @@
             <h5 class="text-secondary text-uppercase mb-4">Əlaqə</h5>
             <p class="mb-4">FusionTech komandası olaraq, texnologiya dünyasında ehtiyaclarınızı qarşılamaq üçün
                 xidmətinizdəyik. Suallarınız, təklif və iradlarınız üçün bizimlə əlaqə saxlamaqdan çəkinməyin!</p>
-            <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>Xətai r-u, Ç. Tağılı pr., 26A, Bakı, Azərbaycan</p>
+            <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>Xətai r-u, Ç. Tağılı pr., 26A, Bakı,
+                Azərbaycan</p>
             <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>support@fusiontech.com</p>
             <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+994 98 765 43 21</p>
         </div>
@@ -205,8 +210,7 @@
                 <div class="col-md-4 mb-5">
                     <h5 class="text-secondary text-uppercase mb-4">Şirkət</h5>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-secondary mb-2" href="/about">Şirkət
-                            haqqında</a>
+                        <a class="text-secondary mb-2" href="/about">Şirkət haqqında</a>
                         <a class="text-secondary mb-2" href="/contact">Bizimlə əlaqə</a>
                         <a class="text-secondary mb-2" href="/career">Karyeran bizdə</a>
                         <a class="text-secondary mb-2" href="/site-rules">Saytdan istifadə</a>
