Category, product and brand pages in dashboard are completed

--- a/src/main/resources/templates/admin/brand/create.html
+++ b/src/main/resources/templates/admin/brand/create.html
@@ -6,7 +6,7 @@
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kateqoriyalar - Əlavə et</title>
+    <title>Brendlər - Əlavə et</title>
 </head>
 <body>
 
@@ -14,10 +14,7 @@
 
     <form method="post" style="margin-left: 50px;">
         <div style="margin: 10px 0;">
-            <input type="text" name="name" placeholder="Write category name.." style="width: 350px;">
-        </div>
-        <div style="margin: 10px 0;">
-            <input type="text" name="image" placeholder="Enter image url.." style="width: 350px;">
+            <input type="text" name="name" placeholder="Write brand name" style="width: 350px;">
         </div>
         <div style="margin: 10px 0;">
             <button type="submit">Create</button>
