--- a/src/main/resources/templates/admin/brand/update.html
+++ b/src/main/resources/templates/admin/brand/update.html
@@ -6,7 +6,7 @@
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kateqoriyalar - Əlavə et</title>
+    <title>Brendlər - Yenilə</title>
 </head>
 <body>
 
@@ -14,13 +14,11 @@
 
     <form method="post" style="margin-left: 50px;">
         <div style="margin: 10px 0;">
-            <input type="text" name="name" placeholder="Write category name.." style="width: 350px;">
+            <input type="text" name="name" th:value="${brand.name}" placeholder="Brand name"
+                   style="width: 350px;">
         </div>
         <div style="margin: 10px 0;">
-            <input type="text" name="image" placeholder="Enter image url.." style="width: 350px;">
-        </div>
-        <div style="margin: 10px 0;">
-            <button type="submit">Create</button>
+            <input type="submit" value="Update">
         </div>
     </form>
 
