--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,11 +2,11 @@
 <html
         xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{dashboard/layout}"
+        layout:decorate="~{admin/layout}"
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>İdarə Paneli</title>
 </head>
 <body>
 
