--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -43,8 +43,8 @@
             <div class="d-inline-flex align-items-center h-100">
                 <a class="text-body mr-3" href="/about">Haqqımızda</a>
                 <a class="text-body mr-3" href="/contact">Əlaqə</a>
-                <a class="text-body mr-3" href="">Yardım</a>
-                <a class="text-body mr-3" href="">FAQs</a>
+                <a class="text-body mr-3" href="/contact">Yardım</a>
+                <a class="text-body mr-3" href="/about">FAQs</a>
             </div>
         </div>
         <div class="col-lg-6 text-center text-lg-right">
@@ -212,7 +212,7 @@
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-secondary mb-2" href="/about">Şirkət haqqında</a>
                         <a class="text-secondary mb-2" href="/contact">Bizimlə əlaqə</a>
-                        <a class="text-secondary mb-2" href="/career">Karyeran bizdə</a>
+                        <a class="text-secondary mb-2" href="https://www.offer.az/">Karyeran bizdə</a>
                         <a class="text-secondary mb-2" href="/site-rules">Saytdan istifadə</a>
                         <a class="text-secondary mb-2" href="/privacy">Konfidensiallıq</a>
                         <a class="text-secondary" href="/corporate">Korporativ satışlar</a>
