--- a/src/main/resources/templates/admin/category/update.html
+++ b/src/main/resources/templates/admin/category/update.html
@@ -2,19 +2,28 @@
 <html
         xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{dashboard/layout}"
+        layout:decorate="~{admin/layout}"
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Kateqoriyalar - Yenilə</title>
 </head>
 <body>
 
 <section layout:fragment="content">
 
-    <form method="post">
-        <input type="text" name="name" th:value="${category.name}">
-        <input type="submit" value="Update">
+    <form method="post" style="margin-left: 50px;">
+        <div style="margin: 10px 0;">
+            <input type="text" name="name" th:value="${category.name}" placeholder="Category name"
+                   style="width: 350px;">
+        </div>
+        <div style="margin: 10px 0;">
+            <input type="text" name="image" th:value="${category.image}" placeholder="Category image"
+                   style="width: 350px;">
+        </div>
+        <div style="margin: 10px 0;">
+            <input type="submit" value="Update">
+        </div>
     </form>
 
 </section>
