--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -103,6 +103,17 @@
         </li>
 
         <!-- Divider -->
+        <hr class="sidebar-divider my-0">
+
+
+        <!-- Nav Item - Appeals -->
+        <li class="nav-item">
+            <a class="nav-link" href="/admin/appeal">
+                <i class="fa-solid fa-envelope"></i>
+                <span>Appeals</span></a>
+        </li>
+
+        <!-- Divider -->
         <hr class="sidebar-divider">
 
 
