--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -391,6 +391,10 @@
     </div>
 </div>
 
+<!-- Dynamic inputs for adding subcategories -->
+<script src="/admin/js/addSCategoryUpdate.js"></script>
+<script src="/admin/js/addSCategoryCreate.js"></script>
+
 <!-- Dynamic inputs for adding images -->
 <script src="/admin/js/addImagesUpdate.js"></script>
 <script src="/admin/js/addImagesCreate.js"></script>
