--- a/src/main/resources/templates/admin/brand/create.html
+++ b/src/main/resources/templates/admin/brand/create.html
@@ -14,7 +14,7 @@
 
     <form method="post" style="margin-left: 50px;">
         <div style="margin: 10px 0;">
-            <input type="text" name="name" placeholder="Write brand name" style="width: 350px;">
+            <input type="text" name="name" placeholder="Write brand name" style="width: 350px;" required>
         </div>
         <div style="margin: 10px 0;">
             <button type="submit">Create</button>
