user pages in dashboard are ready

--- a/src/main/resources/templates/admin/user/create.html
+++ b/src/main/resources/templates/admin/user/create.html
@@ -23,16 +23,16 @@
             <input type="email" name="email" placeholder="Enter email" style="width: 350px;" required>
         </div>
         <div style="margin: 10px 0;">
-            <input type="radio" name="gender" value="0" id="genderMale" checked/>
+            <input type="radio" name="gender" value="MALE" id="genderMale" checked/>
             <label class="form-label" for="genderMale">Male</label>
-            <input type="radio" name="gender" value="1" id="genderFemale"/>
+            <input type="radio" name="gender" value="FEMALE" id="genderFemale"/>
             <label class="form-label" for="genderFemale">Female</label>
         </div>
         <div style="margin: 10px 0;">
             <input type="text" name="image" placeholder="Enter image url" style="width: 350px;" required>
         </div>
         <div style="margin: 10px 0;">
-            <input type="text" name="password" placeholder="Enter password" style="width: 350px;" required>
+            <input type="password" name="password" placeholder="Enter password" style="width: 350px;" required>
         </div>
         <div style="margin: 10px 0;">
             <button type="submit">Create</button>
