slider pages in dashboard are ready

--- a/src/main/resources/templates/admin/user/create.html
+++ b/src/main/resources/templates/admin/user/create.html
@@ -29,7 +29,7 @@
             <label class="form-label" for="genderFemale">Female</label>
         </div>
         <div style="margin: 10px 0;">
-            <input type="text" name="image" placeholder="Enter image url" style="width: 350px;" required>
+            <input type="text" name="image" placeholder="Enter image url (optional)" style="width: 350px;">
         </div>
         <div style="margin: 10px 0;">
             <input type="password" name="password" placeholder="Enter password" style="width: 350px;" required>
