--- a/src/main/resources/templates/admin/user/update.html
+++ b/src/main/resources/templates/admin/user/update.html
@@ -34,11 +34,11 @@
             <label class="form-label" for="genderFemale">Female</label>
         </div>
         <div style="margin: 10px 0;">
-            <input type="text" name="image" th:value="${user.image}" placeholder="User image url"
-                   style="width: 350px;" required>
+            <input type="text" name="image" th:value="${user.image}" placeholder="User image url (optional)"
+                   style="width: 350px;">
         </div>
         <div style="margin: 10px 0;">
-            <input type="password" name="password" placeholder="Leave empty to keep current password"
+            <input type="password" name="password" placeholder="Password (leave empty to keep current)"
                    style="width: 350px;">
         </div>
         <div style="margin: 10px 0;">
