--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -36,10 +36,10 @@
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/admin">
-            <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
+            <div class="sidebar-brand-icon rotate-n-0">
+                <i class="fa-solid fa-gears"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+            <div class="sidebar-brand-text mx-3">Admin<sup>Panel</sup></div>
         </a>
 
         <!-- Divider -->
@@ -50,6 +50,16 @@
             <a class="nav-link" href="/admin">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span></a>
+        </li>
+
+        <!-- Divider -->
+        <hr class="sidebar-divider my-0">
+
+        <!-- Nav Item - Sliders -->
+        <li class="nav-item">
+            <a class="nav-link" href="/admin/slider">
+                <i class="fa-solid fa-images"></i>
+                <span>Sliders</span></a>
         </li>
 
         <!-- Divider -->
