--- a/src/main/resources/templates/admin/appeal/index.html
+++ b/src/main/resources/templates/admin/appeal/index.html
@@ -15,7 +15,7 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th scope="col">#</th>
+            <th scope="col">Id</th>
             <th scope="col">Name</th>
             <th scope="col">Surname</th>
             <th scope="col">Email</th>
